--- a/src/rich_message_style.css
+++ b/src/rich_message_style.css
@@ -151,7 +151,6 @@
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 10px;
     background-color: white !important;
-    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -180,6 +179,11 @@
     white-space: pre-line;
     text-align: left;
     padding-bottom: 15px;
+}
+
+/* Disable breaks being added by firefox due to bug in clamp-lines library */
+.text_subtitle_gallery > div > br {
+    display: none;
 }
 
 .quick_reply_container {
